--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Srinivasan Surendran</title>
     <link rel="stylesheet" href="/Users/srini/Desktop/css-mysite/styles.css" />
-    <link rel="icon" href="/Users/srini/Desktop/css-mysite/images/man.png" />
+    <link rel="icon" href="man.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -19,19 +19,19 @@
     <div class="top-container">
       <img
         class="top-cloud"
-        src="/Users/srini/Desktop/css-mysite/images/cloud.png"
+        src="cloud.png"
         alt="cloud image"
       />
       <h1>I'm Srinivasan.</h1>
       <h2>a web developer</h2>
       <img
         class="bottom-cloud"
-        src="/Users/srini/Desktop/css-mysite/images/cloud.png"
+        src="cloud.png"
         alt="cloud image"
       />
       <img
         class="mountain"
-        src="/Users/srini/Desktop/css-mysite/images/mountain.png"
+        src="mountain.png"
         alt="Land image"
       />
     </div>
@@ -39,7 +39,7 @@
       <div class="profile">
         <img
           width="100"
-          src="/Users/srini/Desktop/css-mysite/images/man.png"
+          src="man.png"
           alt="man-image"
         />
         <h2>Hello.</h2>
@@ -57,7 +57,7 @@
         <div class="skill-row">
           <img
             class="tool"
-            src="/Users/srini/Desktop/css-mysite/images/tools.png"
+            src="tools.png"
             alt="img of tools"
           />
           <h3>Design what you want.</h3>
@@ -69,7 +69,7 @@
         <div class="skill-row">
           <img
             class="desktop"
-            src="/Users/srini/Desktop/css-mysite/images/coding.png"
+            src="coding.png"
             alt="desktop-img"
           />
           <h3>Develop what you need.</h3>
