--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Srinivasan Surendran</title>
-    <link rel="stylesheet" href="/Users/srini/Desktop/css-mysite/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
     <link rel="icon" href="man.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
